samples/_failures_safe/1761004197_756abe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3edf3c6.c: In function ‘main’:
./samples/SAFE/__tmp_c3edf3c6.c:158:5: error: expected declaration or statement at end of input
  158 |     }
      |     ^
